fixed dark mode

--- a/public/styles.css
+++ b/public/styles.css
@@ -37,3 +37,21 @@ h1{
     font-weight: 400;
     font-style: normal;
 }
+.btn{
+    position: absolute;
+    right:50px;
+    top:50px;
+    padding:6px;
+    border: 2px solid white;
+    background-color: black;
+    font-family: "Audiowide", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color:white;
+    border-radius: 8px;
+}
+.light-mode{
+    background-color: white;
+    color:black;
+    border-color: black;
+}
